--- a/GoConqr_dashboard/templates/dashboard.html
+++ b/GoConqr_dashboard/templates/dashboard.html
@@ -1,4 +1,8 @@
 {% extends 'basic.html' %} {% block Title %} User Profill{% endblock%} {% block nav%}
+<li class="nav-item">
+    <a class="nav-link" href="feedback">feedback</a>
+</li>
+</ul>
 <form class="d-flex">
 
     <a class=' nav-link hover' style="color: white;">{{ username}}</a>
