--- a/GoConqr_dashboard/templates/about.html
+++ b/GoConqr_dashboard/templates/about.html
@@ -200,7 +200,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact">Contact</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="feedback">feedback</a>
+                    </li>
 
                 </ul>
 
