--- a/GoConqr_dashboard/templates/index.html
+++ b/GoConqr_dashboard/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'basic.html' %} {% block Title%} Go Conqr {% endblock%} {% block nav%}
+</ul>
 <button class="float-right btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Sign Up</button>&nbsp;&nbsp;
 <button class="flaot-right btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#SignIn"> Sign In</button> {% endblock%} {% block body %} {% for message in messages %}
 <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
@@ -219,6 +220,7 @@
                                 <strong>{{ i.title }}</strong><br><br>
                                 <strong>Docs link: <a href='{{ i.doc_link }}' target="_blank">{{ i.doc_link}}</a></strong><br><br>
                                 <p class="card-text ">{{ i.description}}</p>
+                                <button class='btn btn-success'>Summary</button>
                             </div>
                         </div>
                         {% endfor%}
@@ -264,6 +266,7 @@
                                     <strong>{{ i.title }}</strong><br><br>
                                     <strong>Docs link: <a href='{{ i.doc_link }}' target="_blank">{{ i.doc_link}}</a></strong><br><br>
                                     <p class="card-text ">{{ i.description}}</p>
+
                                 </div>
                             </div>
                             {% endfor%}
